--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ koinVersion = "3.2.0"
 sqldelightVersion = "2.0.2"
 navVersion = "2.7.7"
 lottieVersion = "6.4.0"
+appcompatVersion = "1.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelightVersion" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navVersion" }
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieVersion" }
+appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 
 
 [plugins]
